@@ -1,10 +1,10 @@
 """Tests for config.py."""
 
-import subprocess
 import sys
 
 from pytype import config
 from pytype import datatypes
+from pytype.tests import test_utils
 
 import unittest
 
@@ -61,17 +61,10 @@ class ConfigTest(unittest.TestCase):
     ]:
       self._test_arg_conflict(arg1, arg2)
 
-  # TODO(rechen): Remove this hack once python3.7 is available in all of
-  # pytype's testing environments.
-  try:
-    subprocess.call(["python3.7", "-V"])
-  except OSError:
-    pass
-  else:
-    # pylint: disable=g-wrong-blank-lines
-    def test_v37(self):
-      opts = config.Options(["-V3.7", "test.py"])
-      self.assertEqual(opts.python_version, (3, 7))
+  @test_utils.skipUnless37Available
+  def test_v37(self):
+    opts = config.Options(["-V3.7", "test.py"])
+    self.assertEqual(opts.python_version, (3, 7))
 
 
 class PostprocessorTest(unittest.TestCase):
